# OCCT-RT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/scripts/: parse_benchmark.py  render_shaded.py
.github/workflows/: ci.yml  release.yml
build-test/: .ninja_deps  .ninja_log  build.ninja
dev/bench/: index.html
dev/bench/linux-x64-embree/: data.js
dev/bench/linux-x64-occt/: data.js
dev/bench/linux-x64-simd4/: data.js
dev/bench/linux-x64-simd8/: data.js
dev/bench/macos-arm64-embree/: data.js
dev/bench/macos-arm64-occt/: data.js
dev/bench/macos-arm64-simd4/: data.js
dev/bench/macos-arm64-simd8/: data.js
dev/bench/win-x64-embree/: data.js
dev/bench/win-x64-occt/: data.js
dev/bench/win-x64-simd4/: data.js
dev/bench/win-x64-simd8/: data.js
dev/renders/: metadata.json
docs/: nurbs_rendering_research.md  optimizations_applied.md  optimizations_todo.md
samples/raytracer/: raytracer_test.cxx
src/BRepIntCurveSurface/: BRepIntCurveSurface_InterBVH.cxx  BRepIntCurveSurface_InterBVH.hxx  BRepIntCurveSurface_OverlapAnalyzer.cxx  BRepIntCurveSurface_OverlapAnalyzer.hxx  BRepIntCurveSurface_RayPacket.hxx  BRepIntCurveSurface_SIMDSurface.hxx  BRepIntCurveSurface_ZEvaluator.cxx  BRepIntCurveSurface_ZEvaluator.hxx
src/Viewer/: Viewer_CADLoader.cxx  Viewer_CADLoader.hxx  Viewer_Camera.cxx  Viewer_Camera.hxx
test_data/: box.brep  bspline_surface.brep  cone.brep  cylinder.brep  io1-ca-214.brep  many_tori.brep  mr.brep  multiface.brep  simple_L021.brep  sphere.brep  spiral_wind_turbine.brep  torus.brep
tools/: raytracer.cxx  viewer.cxx
